I had an infinite while loop for removing duplicates. This crashed me and I had to rebuild the entire project. I fixed the loops logic but commented out the while loop to test how code works. It works but everything clusters in the corner and overlaps. I will add back duplicate removal loop as well as possibly adding wraparound

--- a/assn4/Config/DefaultEngine.ini
+++ b/assn4/Config/DefaultEngine.ini
@@ -52,6 +52,6 @@ PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Assn4.Assn4
-GameDefaultMap=/Game/Assn4.Assn4
+EditorStartupMap=/Game/assn4.assn4
+GameDefaultMap=/Game/assn4.assn4
 
