--- a/assn4/Plugins/assn4Plugin/assn4Plugin.uplugin
+++ b/assn4/Plugins/assn4Plugin/assn4Plugin.uplugin
@@ -3,9 +3,9 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "assn4Plugin",
-	"Description": "Plugin for assignment 4",
+	"Description": "",
 	"Category": "Other",
-	"CreatedBy": "Nikita",
+	"CreatedBy": "",
 	"CreatedByURL": "",
 	"DocsURL": "",
 	"MarketplaceURL": "",
